--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
-Package: explogger
+Package: logrrr
 Type: Package
-Title: experimental structured logging
+Title: Structured, Pluggable Logging Framework
 Version: 0.0.1
-Description: Experimental structured logging framework.
+Description: A structured, pluggable logging framework for R.
 Encoding: UTF-8
 LazyData: true
 Authors@R: 
