--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,8 +14,8 @@ RoxygenNote: 6.1.0
 Imports: 
     R6,
     crayon,
-    glue,
-    rlang
+    glue (>= 1.3.0),
+    rlang (>= 0.2.1)
 Suggests: 
     testthat,
     jsonlite
