update travis for code coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,13 @@
 language: R
 sudo: false
 cache: packages
+
+matrix:
+  include:
+    - r: oldrel
+    - r: release
+      env: R_CODECOV=true
+    - r: devel
+
+after_success:
+  - if [[ "${R_CODECOV}" ]]; then R -e 'covr::codecov()'; fi
