--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: logrrr
 Type: Package
 Title: Structured, Pluggable Logging Framework
-Version: 0.0.1
+Version: 0.1.0
 Description: A structured, pluggable logging framework for R.
 Encoding: UTF-8
 LazyData: true
@@ -20,5 +20,6 @@ Imports:
 Suggests: 
     testthat,
     jsonlite,
-    covr
+    covr,
+    sessioninfo
 License: MIT + file LICENSE
