--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,6 @@ export(LogOutput)
 export(Logrrr)
 export(TextFormatter)
 export(format_entry_fields)
+export(tracef)
 importFrom(R6,R6Class)
 importFrom(utils,modifyList)
