implement tracing so it works in shiny

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,6 @@ export(LogOutput)
 export(Logrrr)
 export(TextFormatter)
 export(format_entry_fields)
-export(tracef)
+export(shinytrace)
 importFrom(R6,R6Class)
 importFrom(utils,modifyList)
